# fir

./: .gitignore  FIR_specification.txt  LICENSE.txt  TODO.txt  cabal.project  default.nix  dev_info.md  fir.cabal  getting_started.md  nixpkgs.json  overlay.nix  readme.md  stack.yaml
fir-examples/: cabal.project  default.nix  fir-examples.cabal  readme.md  stack.yaml
fir-examples/app/: juliaSet.hs  offscreen.hs  text.hs
fir-examples/app/Bezier/: Main.hs
fir-examples/app/Compute/: Main.hs
fir-examples/app/FullPipeline/: Main.hs
fir-examples/app/Hopf/: Main.hs
fir-examples/app/JuliaSet/: Main.hs
fir-examples/app/Kerr/: Main.hs
fir-examples/app/Offscreen/: Main.hs
fir-examples/app/Texture/: Main.hs
fir-examples/examples/apps/FIR/Examples/Bezier/: Application.hs
fir-examples/examples/apps/FIR/Examples/FullPipeline/: Application.hs
fir-examples/examples/apps/FIR/Examples/Hopf/: Application.hs  Villarceau.hs
fir-examples/examples/apps/FIR/Examples/Ising/: Application.hs
fir-examples/examples/apps/FIR/Examples/JuliaSet/: Application.hs
fir-examples/examples/apps/FIR/Examples/Kerr/: Application.hs
fir-examples/examples/apps/FIR/Examples/Klein/: Application.hs
fir-examples/examples/apps/FIR/Examples/Logo/: Application.hs
fir-examples/examples/apps/FIR/Examples/Offscreen/: Application.hs
fir-examples/examples/apps/FIR/Examples/RayTracing/: Application.hs  BuildScene.hs  IOR.hs  Scene.hs  Scenes.hs
fir-examples/examples/apps/FIR/Examples/RayTracing/Scenes/: CornellBox.hs  CornellBox2.hs  Furnace.hs  Pyramid.hs  Weekend.hs
fir-examples/examples/apps/FIR/Examples/Texture/: Application.hs
fir-examples/examples/apps/FIR/Examples/Toy/: Application.hs
fir-examples/examples/exes/Bezier/: Main.hs
fir-examples/examples/exes/FullPipeline/: Main.hs
fir-examples/examples/exes/Hopf/: Main.hs
fir-examples/examples/exes/Ising/: Main.hs
fir-examples/examples/exes/JuliaSet/: Main.hs
fir-examples/examples/exes/Kerr/: Main.hs
fir-examples/examples/exes/Klein/: Main.hs
fir-examples/examples/exes/Logo/: Main.hs
fir-examples/examples/exes/Offscreen/: Main.hs
fir-examples/examples/exes/RayTracing/: Main.hs
fir-examples/examples/exes/Texture/: Main.hs
fir-examples/examples/exes/Toy/: Main.hs
fir-examples/examples/shaders/FIR/Examples/Bezier/: Shaders.hs
fir-examples/examples/shaders/FIR/Examples/FullPipeline/: Shaders.hs
fir-examples/examples/shaders/FIR/Examples/Hopf/: Shaders.hs
fir-examples/examples/shaders/FIR/Examples/Ising/: Shaders.hs
fir-examples/examples/shaders/FIR/Examples/JuliaSet/: Shaders.hs
fir-examples/examples/shaders/FIR/Examples/Kerr/: Colour.hs  Coordinates.hs  Doppler.hs  Event.hs  Info.hs  Motion.hs  Noise.hs  RungeKutta.hs  Shaders.hs
fir-examples/examples/shaders/FIR/Examples/Klein/: Shaders.hs
fir-examples/examples/shaders/FIR/Examples/Logo/: Shaders.hs
fir-examples/examples/shaders/FIR/Examples/Offscreen/: Shaders.hs
fir-examples/examples/shaders/FIR/Examples/RayTracing/: Camera.hs  Colour.hs  Estimator.hs  Geometry.hs  Luminaire.hs  Material.hs  QuasiRandom.hs  Rays.hs  Shaders.hs  Sky.hs  Types.hs
fir-examples/examples/shaders/FIR/Examples/Texture/: Shaders.hs
fir-examples/examples/shaders/FIR/Examples/Toy/: Shaders.hs
fir-examples/paths/FIR/Examples/: Paths.hs
fir-examples/paths/FIR/Examples/Paths/: CreateDirs.hs
fir-examples/src/: Bezier.hs  Compute.hs  FullPipeline.hs  Hopf.hs  JuliaSet.hs  Logo.hs  Offscreen.hs  Text.hs  Texture.hs  example1.hs  fullpipeline.hs  julia.hs  juliaset.hs  offscreen.hs  text.hs  texture.hs
fir-examples/src/Data/Traversable/: Indexed.hs
fir-examples/src/Examples/: Bezier.hs  Common.hs  FullPipeline.hs  Hopf.hs  JuliaSet.hs  Kerr.hs  Logo.hs  Offscreen.hs  RenderState.hs  Texture.hs
fir-examples/src/Examples/Bezier/: Application.hs  Shaders.hs
fir-examples/src/Examples/FullPipeline/: Application.hs  Shaders.hs
fir-examples/src/Examples/Hopf/: Application.hs  Shaders.hs  Villarceau.hs
fir-examples/src/Examples/JuliaSet/: Application.hs  Shaders.hs
fir-examples/src/Examples/Kerr/: Application.hs  Colour.hs  Coordinates.hs  Doppler.hs  Event.hs  Info.hs  Motion.hs  Noise.hs  RungeKutta.hs  Shaders.hs
fir-examples/src/Examples/Logo/: Application.hs  Shaders.hs
fir-examples/src/Examples/Offscreen/: Application.hs  Shaders.hs
fir-examples/src/Examples/Texture/: Application.hs  Shaders.hs
fir-examples/src/FIR/Examples/: Common.hs  DearImGui.hs  Reload.hs  RenderState.hs
fir-examples/src/Shaders/: Bezier.hs  Compute.hs  FullPipeline.hs  Hopf.hs  JuliaSet.hs  Logo.hs  Offscreen.hs  Texture.hs
fir-examples/src/Simulation/: Observer.hs
fir-examples/src/Vulkan/: Attachment.hs  Backend.hs  Buffer.hs  Context.hs  Features.hs  Formats.hs  Memory.hs  Monad.hs  Observer.hs  Pipeline.hs  RayTracing.hs  Resource.hs  SDL.hs  Screenshot.hs
fir-examples/src/example1/: main.hs  shaders.hs
fir-examples/src/foreign/storable/: struct.hs
fir-examples/src/offscreen/: main.hs  shaders.hs
fir-examples/src/shaders/: example1.hs  fullpipeline.hs  julia.hs  juliaset.hs  offscreen.hs  text.hs  texture.hs
fir-examples/src/vulkan/: backend.hs  buffer.hs  memory.hs  monad.hs  observer.hs  sdl.hs
src/: FIR.hs  ast.hs  bindings.hs  codegen.hs  fir.hs  indexed.hs  linear.hs  main.hs  spirv.hs  test.hs
src/CodeGen/: Application.hs  Applicative.hs  Array.hs  Binary.hs  CFG.hs  CodeGen.hs  CodeGen.hs-boot  Composite.hs  Debug.hs  Functions.hs  IDs.hs  Images.hs  Instruction.hs  Monad.hs  Optics.hs  Phi.hs  Pointers.hs  PrimOps.hs  Put.hs  RayTracing.hs  State.hs
src/Data/: Product.hs  Product.hs-boot
src/Deriving/: Base.hs
src/FIR/: AST.hs  AST.hs-boot  ASTState.hs  Binding.hs  Builtin.hs  Definition.hs  Generics.hs  Labels.hs  Layout.hs  Layout.hs-boot  Module.hs  Pipeline.hs  Pipeline.hs-boot  Prelude.hs  Program.hs  ProgramState.hs  ProgramState.hs-boot  Swizzle.hs  Synonyms.hs  Temp.hs
src/Math/: Linear.hs  Quaternion.hs
src/SPIRV/: Builtin.hs  Capability.hs  Control.hs  Decoration.hs  (+13 more)
test/: CabalTests.hs  Folders.hs  Test.hs  Tests.hs  test.hs
(+319 files in other folders)
