cabal-version:  3.0
name:           fir
version:        0.0.1.0
synopsis:       An EDSL that compiles to SPIR-V for graphics programming on the GPU in Haskell.
category:       Graphics
author:         Sam Derbyshire
maintainer:     sam.derbyshire@gmail.com
homepage:       https://gitlab.com/sheaf/fir
build-type:     Simple
description:

  __FIR__ is an EDSL for writing GPU shader code in Haskell, compiled to __@SPIR-V@__.
  Requires GHC >= 8.8.

  With this library, shader programs can be written using @do@ notation.
  Such programs are then transformed into abstract syntax trees (ASTs),
  before being compiled to @SPIR-V@ assembly.

  In effect, this replaces @GLSL@ as a shader language.
  This means the Haskell type-system and type-checker are put to use
  in verifying programs at compile-time.
  Functional idioms, such as functor and applicative operations, are also supported.

  See the @fir-examples@ project subdirectory for fleshed out examples,
  including using the @vulkan-api@ package for rendering.

  The exposed modules are:

  ["FIR"]
      Re-exports the main functionality of the library: writing and compiling programs.


  ["FIR.Labels"]
      Optional imperative-like syntax using /OverloadedLabels/.


  ["Math.Linear"]
      Vectors, matrices, and operations on them, as used by this library.


  ["Math.Quaternion"]
      Quaternions and their action by conjugation in 3 dimensions, useful for 3D cameras.



  Important types used by this library:

  [@AST a@]

      Code for a pure value of type @a@, represented internally as an abstract syntax tree.

      Overloaded functions are provided that automatically create and combine terms of this type.
      For instance, @3 + 5 :: AST Float@ gets desugared to @PrimOp FAdd ( Lit 3.0 ) ( Lit 5.0 )@.

  [@Codensity AST (AST a := j) i@]

      A monadic expression, starting in state @i@ and ending in state @j@.
      This state is used to keep track of information at the type level,
      allowing for type errors to be thrown on invalid operations
      (e.g. writing to a read-only variable, image sampling outside a fragment shader, etc).

      A value of type @Codensity AST (AST a := j) i@ can be thought of as stateful GPU code
      producing a value of type @a@.

      Uses McBride-style indexed monads, see "Control.Monad.Indexed".

  [@Program defs a@]

      A shader program that can be compiled to @SPIR-V@,
      and which returns a value of type @a@; most often @a ~ ()@.

      @defs@ is a type-level list of shader inputs/ouputs (uniforms, varyings, etc),
      top-level functions, and entry points.

      See "FIR.Program" for the definition, and the example shaders for common usage patterns.


  All three of these types can be displayed graphically as a tree, using the 'FIR.ast' function.
  This can assist in understanding inlining behaviour.


  It is recommended to install the [Vulkan SDK](https://www.lunarg.com/vulkan-sdk/),
  as it provides useful executables to manipulate @SPIR-V@ assembly, such as
  @spirv-dis@ for viewing (edit and then recompile with @spirv-as@),
  @spirv-opt@ for optimising, and @spirv-cfg@ for generating control flow graphs.
  It is also possible to use @spirv-cross@ to automatically generate @GLSL@ code
  from @SPIR-V@.

library

    hs-source-dirs:
        src
  
    exposed-modules:
        FIR
      , FIR.Labels
      , Math.Linear
      , Math.Quaternion

    other-modules:
        CodeGen.Application
      , CodeGen.Applicative
      , CodeGen.Array
      , CodeGen.Binary
      , CodeGen.CFG
      , CodeGen.CodeGen
      , CodeGen.Composite
      , CodeGen.Debug
      , CodeGen.Functions
      , CodeGen.IDs
      , CodeGen.Images
      , CodeGen.Instruction
      , CodeGen.Monad
      , CodeGen.Optics
      , CodeGen.Phi
      , CodeGen.Pointers
      , CodeGen.PrimOps
      , CodeGen.Put
      , CodeGen.State
      , Control.Arrow.Strength
      , Control.Monad.Indexed
      , Control.Type.Optic
      , Data.Binary.Class.Put
      , Data.Constraint.All
      , Data.Containers.Traversals
      , Data.Function.Variadic
      , Data.Product
      , Data.Type.Error
      , Data.Type.Known
      , Data.Type.List
      , Data.Type.Map
      , Data.Type.Maybe
      , Data.Type.Nat
      , Data.Type.Ord
      , Data.Type.Snoc
      , Data.Type.String
      , Deriving.Base
      , FIR.AST
      , FIR.ASTState
      , FIR.Binding
      , FIR.Builtin
      , FIR.Definition
      , FIR.Instances.AST
      , FIR.Instances.Bindings
      , FIR.Instances.Codensity
      , FIR.Instances.Images
      , FIR.Instances.Optics
      , FIR.Layout
      , FIR.Pipeline
      , FIR.Prim.Array
      , FIR.Prim.Image
      , FIR.Prim.Singletons
      , FIR.Prim.Struct
      , FIR.Prim.Op
      , FIR.Program
      , FIR.Swizzle
      , FIR.Synonyms
      , FIR.Temp
      , Math.Algebra.Class
      , Math.Algebra.GradedSemigroup
      , Math.Logic.Bits
      , Math.Logic.Class
      , SPIRV.Builtin
      , SPIRV.Capability
      , SPIRV.Control
      , SPIRV.Decoration
      , SPIRV.ExecutionMode
      , SPIRV.Extension
      , SPIRV.Image
      , SPIRV.Operation
      , SPIRV.PrimOp
      , SPIRV.PrimTy
      , SPIRV.Requirements
      , SPIRV.ScalarTy
      , SPIRV.Stage
      , SPIRV.Storage

    build-depends: 
        base
          >= 4.13
      , template-haskell
          >= 2.15
      , filepath
      , binary
      , bytestring
      , containers
      , mtl
      , transformers
      , tree-view
      , split
          >= 0.2.3.3
      , text-short
          >= 0.1.2
      , vector
          >= 0.12.0.3
      , half
          >= 0.3
      , lens
          >= 4.18
      , distributive
          >= 0.6
      , constraints
          >= 0.10
      , typelits-witnesses
          >= 0.2.3
      , ghc-typelits-knownnat 
          >= 0.7
      , ghc-typelits-natnormalise 
          >= 0.7
      , generic-monoid
          >= 0.1.0.0
      -- for testing
      , text
          >= 1.2.3.1
      , directory
          >= 1.3.3.0
      , process
          >= 1.6.3.0

    default-language:
        Haskell2010

    default-extensions:
        NoStarIsType

    ghc-options:
        -Wall
        -Wcompat
        -fno-warn-orphans
        -fno-warn-unticked-promoted-constructors
        -fno-warn-unused-do-bind
        -fwarn-missing-local-signatures
        -fwarn-incomplete-uni-patterns
        -- -fwarn-redundant-constraints
