cabal-version:       3.0
name:                fir-examples
version:             0.0.1.0
synopsis:            Vulkan example scenes using FIR
category:            Graphics
author:              Sam Derbyshire
maintainer:          sam.derbyshire@gmail.com
license:             BSD-3-Clause
homepage:            https://gitlab.com/sheaf/fir/fir-examples
build-type:          Simple
description:

  This package contains some example Vulkan scenes,
  using shaders compiled by __FIR__.

  Depends on 'vulkan-api' for Vulkan bindings,
  'sdl2' for window and input management,
  and 'JuicyPixels' for exporting PNG renders.

  See the root directory for more information about __FIR__,
  an EDSL for writing shaders that compile to __@SPIR-V@__.

library

  hs-source-dirs:
    src

  exposed-modules:
      Examples.Kerr
    , Examples.Bezier
    , Examples.Bezier.Shaders
    , Examples.FullPipeline
    , Examples.FullPipeline.Shaders
    , Examples.Hopf
    , Examples.Hopf.Shaders
    , Examples.Hopf.Villarceau
    , Examples.JuliaSet
    , Examples.JuliaSet.Shaders
    --, Examples.Kerr
    , Examples.Kerr.Colour
    , Examples.Kerr.Coordinates
    , Examples.Kerr.Doppler
    , Examples.Kerr.Event
    , Examples.Kerr.Info
    , Examples.Kerr.Motion
    , Examples.Kerr.Noise
    , Examples.Kerr.RungeKutta
    , Examples.Kerr.Shaders
    , Examples.Logo
    , Examples.Logo.Shaders
    , Examples.Offscreen
    , Examples.Offscreen.Shaders
    , Examples.Texture
    , Examples.Texture.Shaders
    , Simulation.Observer
    , Vulkan.Backend
    , Vulkan.Buffer
    , Vulkan.Context
    , Vulkan.Features
    , Vulkan.Formats
    , Vulkan.Memory
    , Vulkan.Monad
    , Vulkan.Pipeline
    , Vulkan.Resource
    , Vulkan.Screenshot
    , Vulkan.SDL

  build-depends:
      base
        >= 4.13
    , template-haskell
        >= 2.15
    , fir
        == 0.0.1.0
    , sdl2
        >= 2.5.0 && <= 2.6
    , vulkan-api
        >= 1.1.4 && <= 1.4
    , JuicyPixels
        >= 3.3.2
    , containers
        >= 0.6.0.1
    , vector
        >= 0.12.0.1
    , vector-sized
        >= 1.4.0.0
    , finite-typelits
        >= 0.1.4.2
    , bytestring
        >= 0.10.8.2
    , managed
        >= 1.0
    , text-short
        >= 0.1.2
    , lens
        >= 4.18
    , generic-lens
        >= 1.2.0.1
    , transformers
        >= 0.5.6
    , filepath
        >= 1.4.2.1

  default-language:
    Haskell2010

  ghc-options:
    -Wall
    -Wcompat
    -fno-warn-orphans
    -fno-warn-partial-type-signatures
    -fno-warn-unticked-promoted-constructors
    -fno-warn-unused-do-bind
    -fwarn-missing-local-signatures
    -fwarn-incomplete-uni-patterns

  -- bypass TH segfault bug on Windows, see (GHC issue #13112)[https://gitlab.haskell.org/ghc/ghc/issues/13112]
  if os(windows)
    ghc-options:
      -fexternal-interpreter

  default-extensions:
    NoStarIsType


executable Bezier

  main-is:
    Main.hs

  ghc-options:
    -threaded -rtsopts

  hs-source-dirs:
    app/Bezier

  build-depends:
      base
    , fir-examples

  default-language:
    Haskell2010

executable FullPipeline

  main-is:
    Main.hs

  ghc-options:
    -threaded -rtsopts

  hs-source-dirs:
    app/FullPipeline

  build-depends:
      base
    , fir-examples

  default-language:
    Haskell2010

executable Hopf

  main-is:
    Main.hs

  ghc-options:
    -threaded -rtsopts

  hs-source-dirs:
    app/Hopf

  build-depends:
      base
    , fir-examples

  default-language:
    Haskell2010

executable JuliaSet

  main-is:
    Main.hs

  ghc-options:
    -threaded -rtsopts

  hs-source-dirs:
    app/JuliaSet

  build-depends:
      base
    , fir-examples

  default-language:
    Haskell2010

executable Kerr

  main-is:
    Main.hs

  ghc-options:
    -threaded -rtsopts

  hs-source-dirs:
    app/Kerr

  build-depends:
      base
    , fir-examples

  default-language:
    Haskell2010

executable Logo

  main-is:
    Main.hs

  ghc-options:
    -threaded -rtsopts

  hs-source-dirs:
    app/Logo

  build-depends:
      base
    , fir-examples

  default-language:
    Haskell2010

executable Offscreen

  main-is:
    Main.hs

  ghc-options:
    -threaded -rtsopts

  hs-source-dirs:
    app/Offscreen

  build-depends:
      base
    , fir-examples

  default-language:
    Haskell2010

executable Texture

  main-is:
    Main.hs

  ghc-options:
    -threaded -rtsopts

  hs-source-dirs:
    app/Texture

  build-depends:
      base
    , fir-examples

  default-language:
    Haskell2010
